kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  namespace: template
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
        - name: webserver
          image: grimreapermortis/webserver:1.0.2
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
