kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: demo
spec:
  selector:
    app: webserver
  ports:
    - port: 8000
      targetPort: 8000
  type: LoadBalancer

---

apiVersion: v1
kind: Service
metadata:
  name: front-redis-service
  namespace: demo
  labels:
    app: front-redis
    role: master
spec:
  selector:
    app: front-redis
    role: master
  ports:
    - port: 8379
      targetPort: 6379
