kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  tls:
    - hosts:
        - mortis-grimreaper.ddns.net
      secretName: mortis-tls
  rules:
    - host: mortis-grimreaper.ddns.net
      http:
        paths:
          - backend:
              service:
                name: web-service
                port: 
                  number: 8000
            path: /v2/projects
            pathType: Exact
